<resources>

    <string name="app_name">SkillCinema</string>
    <string name="todo">TODO</string>

    <!--onbording-->
    <string name="onboarding_btn_skip">Skip</string>
    <string name="onboarding_description_first">Find out about the premieres</string>
    <string name="onboarding_description_second">Create collections</string>
    <string name="onboarding_description_third">Share with your friends</string>

    <!--bottom_menu-->
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_search">Search</string>
    <string name="bottom_menu_profile">Profile</string>
    <string name="refresh_btn">refresh</string>

    <!-- Series seasons/episodes fragment -->
    <string name="season_episode_name">%d серия. %s</string>
    <string name="season_chip_name">%d</string>

    <!-- Gallery full fragment -->
    <string name="title_gallery">Галерея</string>
    <string name="chip_name">%s %d</string>
    <string name="label_series_seasons">Сезоны и серии</string>

    <!-- Film detail fragment -->
    <string name="label_film_actors">В фильме снимались</string>
    <string name="label_film_makers">Над фильмом работали</string>
    <string name="label_film_gallery">Галерея</string>
    <string name="label_film_similar">Похожие фильмы</string>
    <string name="seasons_episodes_count">%s, %s</string>
    <string name="placeholder_series_start_year">_</string>
    <string name="placeholder_series_end_year">н.в.</string>
    <string name="show_all">Показать все</string>
    <string name="category">Категория</string>
    <string name="text_all">Все</string>
    <string name="title">Заголовок</string>
    <string name="name_film">Название фильма</string>
    <string name="_10_0">10.0</string>
    <string name="year_genre">год, жанр</string>
    <string name="country_length_age">Страна,Длительность , Возраст</string>
    <string name="default_description_short">Чукотский парень влюбляется в американскую вебкам-модель. Приз Венеции, Кристина Асмус в роли девушки мечты</string>
    <string name="default_description_full">Все меняется в жизни юного чукотского охотника Лёшки с появлением в поселке интернета. Он влюбляется — впервые и сильно — в молчаливую девушку…</string>
    <string name="_0">0</string>
    <string name="name_staff">Имя Фамилия</string>
    <string name="role">Роль</string>
    <string name="filmography">Фильмография</string>
    <string name="count_film">Количество фильмов</string>
    <string name="name">Название</string>
    <string name="name_actor">Имя Фамилия</string>
    <string name="to_the_list">К списку</string>

    <!-- Search setting fragment -->
    <string name="search_settings_title">Настройки поиска</string>
    <string name="search_settings_label_show">Показывать</string>
    <string name="search_settings_radio_all">Все</string>
    <string name="search_settings_radio_films">Фильмы</string>
    <string name="search_settings_radio_series">Сериалы</string>
    <string name="search_settings_rating_text">от %d до %d</string>
    <string name="search_settings_country_label">Страна</string>
    <string name="search_settings_genre_label">Жанр</string>
    <string name="search_settings_rating_label">Рейтинг</string>
    <string name="search_settings_year_label">Год</string>
    <string name="search_settings_radio_popular">Популярность</string>
    <string name="search_settings_radio_rating">Рейтинг</string>
    <string name="search_settings_radio_date">Дата</string>
    <string name="search_settings_sorting_label">Сортировать</string>
    <string name="search_filters_country_choose">Выберете страну</string>
    <string name="search_filters_countries_default">Все страны</string>
    <string name="search_filters_genres_default">Все жанры</string>
    <string name="hint_textfield_search">Фильмы, актёры, режиссёры</string>
    <string name="text_films">Фильмы</string>
    <string name="serials">Сериалы</string>
    <string name="setting_search">Настройки поиска</string>
    <string name="Country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="Year">Год</string>
    <string name="rating">Рейтинг</string>
    <string name="sort">Сортировать</string>
    <string name="date">Дата</string>
    <string name="popularity">Популярность</string>
    <string name="search_not_found">К сожалению, по Вашему\nничего не найдено</string>



</resources>