<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title & back-button -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/DescriptionShort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448" />

        <ImageButton
            android:id="@+id/search_settings_back_btn"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/my_ripple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back_black_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:divider="@drawable/separator_horizontal"
                android:orientation="vertical"
                android:showDividers="middle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_radio_group">

                <!-- Country -->
                <LinearLayout
                    android:id="@+id/ll_search_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:orientation="horizontal"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center_vertical"
                        android:gravity="start"
                        android:text="@string/Country"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/search_settings_country_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical|end"
                        android:gravity="end"
                        android:textSize="14sp"
                        tools:text="Россия" />

                </LinearLayout>

                <!-- Genre -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:orientation="horizontal"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/search_settings_genre_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:textSize="14sp"
                        tools:text="Комедия" />

                </FrameLayout>

                <!-- Year -->
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="26dp"
                    android:orientation="horizontal"
                    android:paddingVertical="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Year"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/search_settings_year_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="с 1998 до 2017"
                        android:textSize="14sp" />

                </FrameLayout>

                <!-- Rating -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="26dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/search_settings_rating_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:textSize="14sp"
                            tools:text="любой" />

                    </FrameLayout>

                    <com.google.android.material.slider.RangeSlider
                        android:id="@+id/search_settings_rating_slider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="26dp"
                        android:autofillHints=""
                        android:valueFrom="1"
                        android:valueTo="10"
                        app:labelBehavior="gone"
                        app:values="@array/initial_slider_rating_values" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="35dp">

                        <TextView
                            android:id="@+id/search_settings_range_start"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:textSize="14sp"
                            tools:text="1" />

                        <TextView
                            android:id="@+id/search_settings_range_end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:textSize="14sp"
                            tools:text="10" />

                    </FrameLayout>

                </LinearLayout>

                <!-- Sorting -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="14dp"
                    android:paddingHorizontal="16dp"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/search_settings_sorting_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sort"
                        android:textSize="12sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/search_radio_group_sorting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/search_settings_sorting_label">

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/search_radio_sorting_date"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="-1dp"
                            android:layout_weight="0.2"
                            android:background="@drawable/radio_selector_left"
                            android:button="@null"
                            android:checked="true"
                            android:gravity="center"
                            android:text="@string/date"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/search_radio_sorting_popular"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.3"
                            android:background="@drawable/radio_selector_center"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/popularity"
                            android:textSize="14sp" />

                        <androidx.appcompat.widget.AppCompatRadioButton
                            android:id="@+id/search_radio_sorting_rating"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-1dp"
                            android:layout_weight="0.2"
                            android:background="@drawable/radio_selector_right"
                            android:button="@null"
                            android:gravity="center"
                            android:text="@string/rating"
                            android:textSize="14sp" />

                    </RadioGroup>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- isViewed -->
                <androidx.appcompat.widget.AppCompatCheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="36dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="16dp"
                    android:button="@drawable/search_settings_checkbox_selector"
                    android:paddingHorizontal="36dp"
                    android:text="Не просмотрен"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/search_settings_label_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="показывать"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/search_radio_group"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/search_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_settings_label_show">

                <RadioGroup
                    android:id="@+id/search_radio_group_film_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/search_radio_all"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="-1dp"
                        android:layout_weight="0.2"
                        android:background="@drawable/radio_selector_left"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:text="@string/text_all"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/search_radio_films"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.3"
                        android:background="@drawable/radio_selector_center"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/text_films"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/search_radio_series"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="-1dp"
                        android:layout_weight="0.2"
                        android:background="@drawable/radio_selector_right"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@string/serials"
                        android:textSize="14sp" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Buttons all/films/series -->

</androidx.constraintlayout.widget.ConstraintLayout>