<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/staff_detail_items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Back button -->

            <ImageButton
                android:id="@+id/btn_back_staff_detail"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/my_ripple"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_black_24" />

            <!-- Main group -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/staff_detail_main_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_back_staff_detail">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_staff_detail"
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/staff_detail_poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@tools:sample/avatars" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/staff_detail_name"
                    style="@style/DescriptionShort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_staff_detail"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/name_staff" />

                <TextView
                    android:id="@+id/staff_detail_profession"
                    style="@style/DescriptionFull"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cv_staff_detail"
                    app:layout_constraintTop_toBottomOf="@id/staff_detail_name"
                    tools:text="@string/role" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Best group -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/staff_detail_best_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/staff_detail_main_group">

                <ImageButton
                    android:id="@+id/ib_show_all_film_staff_detail"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/my_ripple"
                    app:layout_constraintBottom_toTopOf="@+id/staff_detail_best_list"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_show_all_short" />

                <TextView
                    android:id="@+id/tv_staff_category_label"
                    style="@style/DescriptionShort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="Лучшее"
                    app:layout_constraintBottom_toTopOf="@+id/staff_detail_best_list"
                    app:layout_constraintEnd_toStartOf="@+id/tv_staff_all"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_staff_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/text_all"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintBottom_toTopOf="@+id/staff_detail_best_list"
                    app:layout_constraintEnd_toStartOf="@+id/ib_show_all_film_staff_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/staff_detail_best_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_staff_category_label"
                    tools:listitem="@layout/item_film" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <!-- Filmography group -->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/staff_detail_filmography_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tv_filmography_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/count_film"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_staff_filmography_label" />

                <ImageButton
                    android:id="@+id/ib_show_all_filmography"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/my_ripple"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_staff_filmography_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_show_all_short" />

                <TextView
                    android:id="@+id/tv_staff_all_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/to_the_list"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="@+id/ib_show_all_filmography"
                    app:layout_constraintEnd_toStartOf="@+id/ib_show_all_filmography"
                    app:layout_constraintTop_toTopOf="@+id/ib_show_all_filmography"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/tv_staff_filmography_label"
                    style="@style/DescriptionShort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/filmography"
                    app:layout_constraintEnd_toStartOf="@+id/tv_staff_all_"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loader_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loader_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_onboarding_watch_tv"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
